--- a/style.css
+++ b/style.css
@@ -262,3 +262,13 @@ input[type="range"]::-webkit-slider-thumb {
   .volume-container { display: none !important; }
   .track-info span { font-size: 0.9rem !important; }
 }
+/* чтобы фиксированный плеер не перекрывал сетап */
+#main-content {
+  padding-bottom: 160px;
+}
+
+@media (max-width: 600px) {
+  #main-content {
+    padding-bottom: 190px;
+  }
+}
